# FL-Personalization

./: .gitignore  README.md  pyproject.toml
fedpfl/federated_learning/: constants.py  utils.py
fedpfl/federated_learning/clients/: fedbabu_client.py  fedper_client.py  fedrep_client.py  hybrid_avglg_client.py  hybrid_avglg_dual_client.py  hybrid_babulg_dual_client.py  lgfedavg_client.py
fedpfl/federated_learning/example/: flower_server_cnn.py
fedpfl/federated_learning/strategy/: aggregate_body_strategy.py  aggregate_full_strategy.py  aggregate_head_strategy.py  aggregate_hybrid_babulg_dual_strategy.py  initialization_strategy.py
